--- a/src/app/shared/header/header.component.html
+++ b/src/app/shared/header/header.component.html
@@ -1,5 +1,5 @@
 <div class="header-wrapper">
   <div class="header-title">
-      FIFA Turnier Manager
+      <img src="../../../assets/logo.png" class="logo">
   </div>
 </div>
