--- a/src/app/tournament/tournament.component.html
+++ b/src/app/tournament/tournament.component.html
@@ -3,7 +3,7 @@
     <div class="card-content">
       <div class="tournament-grid">
         <div>
-          <h1>Tabelle</h1>
+          <h1><i class="fas fa-trophy symbol-small"></i> Tabelle</h1>
             <div class="standings">
               <table class="tournament-table standings-table">
                 <tr>
@@ -58,7 +58,7 @@
             </div>
         </div>
         <div>
-          <h1 class="h1-right">Teams</h1>
+          <h1 class="h1-right"><i class="fas fa-futbol symbol-small"></i> Teams</h1>
           <table class="tournament-table teams-table">
             <tr>
               <th>Spieler</th>
@@ -93,7 +93,7 @@
           </table>
         </div>
         <div>
-            <h1 class="h1-rowTwo">Hinrunde</h1>
+            <h1 class="h1-rowTwo"><i class="fas fa-list-alt"></i> Hinrunde</h1>
             <table class="tournament-table roster-table">
               <tr>
                 <th>
@@ -382,7 +382,7 @@
             </table>
         </div>
         <div>
-          <h1 class="h1-rowTwo h1-right">Rückrunde</h1>
+          <h1 class="h1-rowTwo h1-right"><i class="fas fa-list-alt"></i> Rückrunde</h1>
           <table class="tournament-table roster-table rost-table-right">
             <tr>
               <th>
