--- a/src/app/shared/header/header.component.css
+++ b/src/app/shared/header/header.component.css
@@ -19,7 +19,6 @@
     box-shadow: 0 2px 5px rgba(0,0,0,.26);
     font-size: 18px;
     color: #fff;
-    text-align: center;
     background: #151b27;
 }
 
@@ -27,4 +26,10 @@
     vertical-align: top;
     overflow: hidden;
     padding-top: 17px;
+    margin-left: 37%;
+}
+
+.menu-item {
+    font-size: 22px;
+    margin-top: 20px;
 }
