--- a/src/app/shared/header/header.component.html
+++ b/src/app/shared/header/header.component.html
@@ -1,5 +1,6 @@
 <div class="header-wrapper">
   <div class="header-title">
-      <img src="../../../assets/logo.png" class="logo">
+    <i class="fas fa-bars menu-item"></i>
+    <img src="../../../assets/logo.png" class="logo">
   </div>
 </div>
